# add_library(Extraction Extraction.cpp)
add_library(ForStmtAnalysis ForStmtAnalysis.cpp)
add_library(TestAnalysis TestAnalysis.cpp)
add_library(BaseExtractor BaseExtractor.cpp)
add_library(MatchingExtractor MatchingExtractor.cpp)
add_library(CyclomaticComplexityAnalysis CyclomaticComplexityAnalysis.cpp)
add_library(LoopKindAnalysis LoopKindAnalysis.cpp)
