add_library(Analyses
    AlgorithmLibraryAnalysis
    ConstexprAnalysis.cpp
    ContainerLibAnalysis
    CyclomaticComplexityAnalysis
    FunctionParameterAnalysis
    LoopDepthAnalysis
    LoopKindAnalysis
    MoveSemanticsAnalysis
    TemplateInstantiationAnalysis
    TemplateParameterAnalysis
    UsingAnalysis
    UtilityLibAnalysis
    VariableTemplateAnalysis
)
