add_library(Analyses
    AlgorithmLibraryAnalysis.cpp
    ConstexprAnalysis.cpp
    ContainerLibAnalysis.cpp
    CyclomaticComplexityAnalysis.cpp
    FunctionParameterAnalysis.cpp
    LoopDepthAnalysis.cpp
    LoopKindAnalysis.cpp
    MoveSemanticsAnalysis.cpp
    TemplateInstantiationAnalysis.cpp
    TemplateParameterAnalysis
    UsingAnalysis.cpp
    UtilityLibAnalysis.cpp
    VariableTemplateAnalysis.cpp
)
